--- a/galeria.html
+++ b/galeria.html
@@ -33,6 +33,8 @@
     <img src="imagenes/Une.jpg" alt="" height="400" width="400">
     <p>Finalmente hemos llegado a Une.</p>
 
+    <a href="https://www.instagram.com/tyguas_del_paramo/">INSTAGRAM: Tyguas del paramo</a>
+
 <br>
 <a href="index.html" >Volver a inicio</a>
 </body>
